--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "moment": "^2.24.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.10",
+    "react-swipeable-views": "^0.13.1",
     "axios": "^0.18.0",
     "react-router-dom": "^4.3.1",
     "store": "^2.0.12",
-    "react-spinners": "^0.5.1"
+    "react-spinners": "^0.5.1",
+    "numeral": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
