--- a/package.json
+++ b/package.json
@@ -3,23 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5",
-    "ramda": "^0.26.1",
-    "react-final-form-hooks": "1.0.0-alpha.1",
-    "final-form": "4.10.0",
-    "joi": "^14.3.1",
-    "moment": "^2.24.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.10",
-    "react-swipeable-views": "^0.13.1",
     "axios": "^0.18.0",
+    "final-form": "4.10.0",
+    "joi": "^14.3.1",
+    "moment": "^2.24.0",
+    "numeral": "^2.0.6",
+    "ramda": "^0.26.1",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-final-form-hooks": "1.0.0-alpha.1",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^4.3.1",
-    "store": "^2.0.12",
+    "react-scripts": "2.1.5",
     "react-spinners": "^0.5.1",
-    "numeral": "^2.0.6"
+    "react-swipeable-views": "^0.13.1",
+    "store": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
