--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "2.1.5",
     "react-spinners": "^0.5.1",
     "react-swipeable-views": "^0.13.1",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "react-stripe-elements": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
