--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ramda": "^0.26.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-final-form-hooks": "1.0.0-alpha.1",
+    "react-final-form-hooks": "^2.0.0",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
